--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/Openzeppelin/openzeppelin-contracts
 	ignore = untracked
+[submodule "lib/foundry-devops"]
+	path = lib/foundry-devops
+	url = https://github.com/Cyfrin/foundry-devops
+	ignore = untracked
